Fix add price input alignment

--- a/src/components/vet.css
+++ b/src/components/vet.css
@@ -2,59 +2,69 @@
     clear: both;
 }
 
+
 /* services.js */
+
 .service-item {
     margin-top: 7px;
     margin-right: 15px;
 }
+
+
 /**/
+
 .rating-title {
     float: left;
     margin-right: 10px;
 }
 
 .service-input-section {
-	float: left;
+    float: left;
 }
 
 .price-input {
-  width: 50px;
+    width: 50px;
 }
 
-.edit-form button, .service button, .add-form button {
-	height: 2em;
-	width: 2em;
-	border-radius: 4px;
-	margin: 8px 8px 0;
-	padding-top: 0;
-	border-top: 0;
+.edit-form button,
+.service button,
+.add-form button {
+    height: 2em;
+    width: 4em;
+    border-radius: 4px;
+    margin: 0 8px;
+    padding-top: 0;
+    border-top: 0;
 }
 
-.edit-form input, .add-form input {
-	margin-right: 8px;
-	height: 2em;
-	margin-bottom: 26px
+.edit-form input,
+.add-form input {
+    margin-right: 8px;
+    height: 2em;
+    /*margin-bottom: 26px;*/
 }
 
 .plus-btn {
-	background-color: green;
+    background-color: green;
 }
 
 .cancel-btn {
-	background-color: orange;
+    background-color: orange;
 }
 
 .edit-button {
-	background-color: blue;
-	color: black;
-	float: left;
+    background-color: blue;
+    color: black;
+    float: left;
 }
 
 .delete-btn {
-	background-color: red;
+    background-color: red;
 }
 
+
 /* tablet portrait */
+
 @media only screen and (max-width: 800px) {
     .service {
         position: relative;
@@ -62,53 +72,53 @@
     }
 
     .edit-form button {
-				margin: 8px 2px 0;
+        margin: 8px 2px 0;
     }
 }
 
+
 /* phones portrait */
+
 @media only screen and (max-width: 500px) {
 
-  .add-form-group {
-    /*margin-bottom: 0;*/
-  }
+    .add-form-group {
+        /*margin-bottom: 0;*/
+    }
 
-  .service-input-section {
-    /*float: left;*/
-  }
+    .service-input-section {
+        /*float: left;*/
+    }
 
-  .price-input-section {
-    /*margin-top: 30px;*/
-  }
+    .price-input-section {
+        /*margin-top: 30px;*/
+    }
 
-  .service-item {
-    /*margin-right: 0;*/
-    /*float: left;*/
-  }
+    .service-item {
+        /*margin-right: 0;*/
+        /*float: left;*/
+    }
 
-  .edit-service-name input, .edit-service-price input {
-  	/*clear: left;*/
-  	/*float: left;*/
-  	margin-bottom: 0;
-  }
+    .edit-service-name input,
+    .edit-service-price input {
+        /*clear: left;*/
+        /*float: left;*/
+        margin-bottom: 0;
+    }
 
-  .edit-service-price {
-  	/*float: left;*/
-  }
+    .edit-service-price {
+        /*float: left;*/
+    }
 }
+
 
 /* small phones portrait */
+
 @media only screen and (max-width: 350px) {
-		.price-input-section {
-			/*display: block !important;*/
-		}
+    .price-input-section {
+        /*display: block !important;*/
+    }
 
-	  .price-input-section button {
-    	margin-left: 0;
-  	}
-
+    .price-input-section button {
+        margin-left: 0;
+    }
 }
-
-
-
-
